--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;500&display=swap');
+
 * {
   padding: 0;
   margin: 0;
@@ -9,6 +11,7 @@ body {
   justify-content: center;
   padding: 1rem;
   height: 100vh;
+  font-family: 'Poppins', sans-serif;
 }
 
 #root {
