--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,10 @@
 #root {
+  display: flex;
+  justify-content: center;
   max-width: 1280px;
+  height: 100vh;
   margin: 0 auto;
-  padding: 2rem;
+  padding: 1rem;
   text-align: center;
 }
 
