--- a/src/index.css
+++ b/src/index.css
@@ -9,7 +9,7 @@
 body {
   display: flex;
   justify-content: center;
-  padding: 1rem;
+  width: 100vw;
   height: 100vh;
   font-family: 'Poppins', sans-serif;
 }
