--- a/src/index.css
+++ b/src/index.css
@@ -7,14 +7,15 @@
 }
 
 body {
-  display: flex;
-  justify-content: center;
   width: 100vw;
   height: 100vh;
   font-family: 'Poppins', sans-serif;
 }
 
 #root {
+  display: flex;
+  justify-content: center;
+  align-items: center;
   width: 100%;
   height: 100%;
 }
